--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,19 @@
   </head>
   <body>
     <div class="container">
+      <!--
       <header>
         <h1><a href="/">vchat</a></h1>
         <h2><a href="/">a simple video chat app</a></h2>
       </header>
-
+      -->
       <div id="okta-login-container"></div>
 
       <div class="row">
         <div class="col"></div>
         <div class="col-md-auto align-self-center">
-          <p id="login"><b>NOTE</b>: You are not currently logged in. If you'd like to start your own
-            chat room please <button type="button" class="btn btn-light" onclick="document.location='/'">log in</button></p>
+          <!--p id="login"><b>NOTE</b>: You are not currently logged in. If you'd like to start your own
+            chat room please <button type="button" class="btn btn-light" onclick="document.location='/'">log in</button></p-->
           <div id="url" class="alert alert-dark" role="alert">
             <span id="roomIntro">ROOM URL</span>: <span id="roomUrl"></span>
           </div>
@@ -43,10 +44,10 @@
       </div>
     </div>
 
-    <footer>
+    <!--footer>
       <p>Hacked together by <a href="https://twitter.com/rdegges">@rdegges</a>
         and <a href="https://twitter.com/oktadev">@oktadev</a>.</p>
-    </footer>
+    </footer-->
 
     <script>
       handleLogin();
