--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>vchat - a simple video chat app</title>
+    <title>vchat - don't save anythings</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/style.css">
@@ -14,12 +14,12 @@
   </head>
   <body>
     <div class="container">
-      <!--
+      
       <header>
-        <h1><a href="/">vchat</a></h1>
-        <h2><a href="/">a simple video chat app</a></h2>
+        <!--h1><a href="/">vchat</a></h1-->
+        <!--h2><a href="/">a simple video chat app</a></h2-->
       </header>
-      -->
+      
       <div id="okta-login-container"></div>
 
       <div class="row">
@@ -44,10 +44,10 @@
       </div>
     </div>
 
-    <!--footer>
-      <p>Hacked together by <a href="https://twitter.com/rdegges">@rdegges</a>
-        and <a href="https://twitter.com/oktadev">@oktadev</a>.</p>
-    </footer-->
+    <footer>
+      <!--p>Hacked together by <a href="https://twitter.com/rdegges">@rdegges</a>
+        and <a href="https://twitter.com/oktadev">@oktadev</a>.</p-->
+    </footer>
 
     <script>
       handleLogin();
