--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
       <div class="row">
         <div class="col"></div>
         <div class="col-md-auto align-self-center">
-          <!--p id="login"><b>NOTE</b>: You are not currently logged in. If you'd like to start your own
-            chat room please <button type="button" class="btn btn-light" onclick="document.location='/'">log in</button></p-->
+          <p id="login"><b>NOTE</b>: You are not currently logged in. If you'd like to start your own
+            chat room please <button type="button" class="btn btn-light" onclick="document.location='/'">log in</button></p>
           <div id="url" class="alert alert-dark" role="alert">
             <span id="roomIntro">ROOM URL</span>: <span id="roomUrl"></span>
           </div>
